# naive-rag-system-hybrid

./: ARCHITECTURE.md  README.md  main.py  pyproject.toml
.github/: github-instructions.md
docs/: bm25-keyword-search.md  chunking.md  indexing.md  issues-vector-search.md
src/api/v1/routes/: query.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/core/: db.py
src/ingestion/: ingestion.py
